k8s/overlays/prod-canary-nginx/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: argo-demo-preview
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: argo-demo
