k8s/overlays/prod-canary-nginx/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
  name: argo-demo
spec:
  ingressClassName: nginx
  rules:
  - host: rollouts-canary.lab
    http:
      paths:
      - backend:
          service:
            name: argo-demo
            port:
              number: 80
        path: /
        pathType: Prefix
